# ai-cookbook

./: .gitignore  README.md  pyproject.toml
ai-tools/chainlit/: agent_langchain_app.py  agent_langgraph_app.py  chainlit.md  simple_app.py
ai-tools/chainlit/helpers/: prompts.py  scraper.py  tools.py
ai-tools/langchain/: openai_client.ipynb  result.html  result.md  tavily_crawl4ai_webload.ipynb
ai-tools/langchain/langgraph/: react_agent.ipynb
ai-tools/neo4j/: docker-compose.yaml  readme.md
llm-course/: 1_1_what_transformers_can_do.ipynb  2_1_behind_the_pipeline.ipynb  2_2_models.ipynb  3_1_processing_the_data.ipynb  3_2_finetuning.ipynb  3_3_full_finetuning.ipynb  3_4_learnng_curve.ipynb
llm-usecase/: 002_vlm_finetuning_image.ipynb
zero-to-gpt/: 001_intro.ipynb  linalg.ipynb
