[project]
name = "ai-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "chainlit>=2.6.8",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.29",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
