[project]
name = "ai-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "beautifulsoup4>=4.13.4",
    "bitsandbytes>=0.49.2",
    "chainlit>=2.6.8",
    "crawl4ai>=0.7.3",
    "datasets>=4.0.0",
    "docling>=2.44.0",
    "evaluate>=0.4.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.4",
    "lxml>=5.4.0",
    "matplotlib>=3.10.7",
    "peft>=0.18.1",
    "pillow>=11.3.0",
    "qwen-vl-utils>=0.0.14",
    "roboflow>=1.1.54",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "sentencepiece>=0.2.0",
    "supervision>=0.27.0.post1",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
